@@ -567,6 +567,7 @@ All (GUI):
 - Add support for wxALWAYS_SHOW_SB style to wxScrolled<> (Catalin Raceanu).
 - Add wxTreeCtrl::EnableBellOnNoMatch() (Jonathan Dagresta).
 - Implement incremental search in wxGenericListCtrl (Jonathan Dagresta).
+- Make TAB behaviour in wxGrid more flexible (Fulvio Senore).
 
 wxGTK:
 
